--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,12 @@
        <artifactId>junit</artifactId>
        <version>3.8</version>
        <scope>test</scope> 
-     </dependency>     
+     </dependency>
+      <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>1.4</version>
+      </dependency>
   </dependencies>
   <build>
   	<directory>build</directory> <!-- where the jar goes -->
